WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131888
[Cocoa] Crash in -[WKWebProcessPlugInHitTestResult nodeHandle] when nodeHandle() is null
https://bugs.webkit.org/show_bug.cgi?id=131888
Summary
[Cocoa] Crash in -[WKWebProcessPlugInHitTestResult nodeHandle] when nodeHandl...
mitz
Reported
2014-04-19 09:40:34 PDT
[Cocoa] Crash in -[WKWebProcessPlugInHitTestResult nodeHandle] when nodeHandle() is null
Attachments
Add a null check
(1.42 KB, patch)
2014-04-19 09:41 PDT
,
mitz
jhoneycutt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2014-04-19 09:41:20 PDT
Created
attachment 229735
[details]
Add a null check
mitz
Comment 2
2014-04-19 10:46:48 PDT
Fixed in <
http://trac.webkit.org/r167537
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug