[Cocoa] Crash in -[WKWebProcessPlugInHitTestResult nodeHandle] when nodeHandle() is null https://bugs.webkit.org/show_bug.cgi?id=131888

Reviewed by Jon Honeycutt.

* WebProcess/InjectedBundle/API/Cocoa/WKWebProcessPlugInHitTestResult.mm:
(-[WKWebProcessPlugInHitTestResult nodeHandle]): Added a null check.



Canonical link: https://commits.webkit.org/149957@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167537 268f45cc-cd09-0410-ab3c-d52691b4dbfc